# aur-builder

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml  release.sh
.github/workflows/: build_rust.yml  docker.yml  docker_build-container.yml  docker_server.yml  docker_web.yml  docker_worker.yml  osv-scanner.yml  rust-clippy.yml
build-container/: Dockerfile  README.md  build-package  get-source  install-dependencies
common/: Cargo.toml
common/src/: config.rs  environment.rs  error_codes.json  errors.rs  lib.rs  types.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entities/: build_results.rs  package_metadata.rs  prelude.rs
database/src/migrator/: m20250120_205654_build_results.rs  m20250120_223506_build_results_add_success.rs  m20250121_131141_build_results_add_finished_at.rs  m20250121_160432_build_results_add_started_at_and_version.rs  m20250316_173233_source.rs  m20250316_182755_subfolder.rs  m20250319_110511_switch_start_and_end_timestamps.rs  mod.rs
docker/: Dockerfile  build-package  get-source  install-dependencies
notifier/: Cargo.toml
notifier/src/: main.rs
notifier/src/templates/: build_notification.html
server/: Cargo.toml
server/src/: config_handler.rs  main.rs  setup_rabbit_mq.rs
server/src/package_checkers/: aur.rs  git.rs  mod.rs
src/: database.rs  environment.rs  lib.rs  main.rs  types.rs
src/database/: mod.rs
src/database/entities/: build_results.rs  mod.rs  package_metadata.rs
src/database/migrator/: m20240624_000001_package_metadata_table.rs  m20250120_205654_build_results.rs  m20250120_223506_build_results_add_success.rs  m20250121_131141_build_results_add_finished_at.rs  m20250121_160432_build_results_add_started_at_and_version.rs  mod.rs
src/entities/: mod.rs  package_metadata.rs  prelude.rs
src/migrator/: m20240624_000001_package_metadata_table.rs
src/server/: main.rs
src/web/: main.rs
src/web/assets/: bootstrap.css  style.css
src/web/bootstrap/: custom-bootstrap.scss  package.json
src/web/templates/: base.html  build-log.html  build-results.html  index.html
src/worker/: build.rs  build_package.rs  main.rs
web/: Cargo.toml
web/src/: main.rs
web/src/bootstrap/: package-lock.json
web/src/templates/: base.html  build-results.html  force-rebuild.html
worker/: Cargo.toml
worker/src/: main.rs
