[package]
name = "aur-builder"
version = "0.1.5"
edition = "2021"

[dependencies]
bollard = "~0.18.1"
pretty_env_logger = "~0.5.0"
lapin = { version = "~2.5.0", features = ["native-tls"]}
reqwest = { version = "~0.12", features = ["json", "native-tls"] }
sea-orm = { version = "~1.1.4", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
sea-orm-migration = "~1.1.4"
serde_json = "~1.0.117"
tokio = {version = "~1.43.0", features = ["full"] }
futures-util = "~0.3.30"
log = "~0.4"
rand = "~0.8.5"
dotenvy = "0.15.7"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "worker"
path = "src/worker/main.rs"

[lib]
name = "aur_builder_commons"
path = "src/lib.rs"
