[package]
name = "common"
version = "1.1.10"
edition = "2024"

[dependencies]
sea-orm = { version = "~1.1.4", features = ["sqlx", "sqlx-dep"]}
serde = { version = "1.0.217", features = ["derive"] }
lapin = { version = "~2.5.0", features = ["native-tls"]}
log = "~0.4"
rand = "~0.9.0"
tokio = {version = "1.45", features = ["full"] }
dotenvy = "~0.15"
lazy_static = "1.5.0"
serde_json = "1.0.140"
config = { version = "~0.15.11" }
