[package]
name = "database"
version = "0.0.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
log = "~0.4"
sea-orm = { version = "~1.1.4", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
sea-orm-migration = "~1.1.4"
tokio = {version = "~1.44", features = ["full"] }
serde = { version = "~1.0", features = ["derive"] }