[package]
name = "database"
version = "1.1.10"
edition = "2024"

[dependencies]
common = { path = "../common" }
log = "~0.4"
sea-orm = { version = "~1.1.4", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"]}
sea-orm-migration = { version = "~1.1.4", default-features = false, features = ["runtime-tokio-native-tls"] }
tokio = {version = "1.45", features = ["full"] }
serde = { version = "~1.0", features = ["derive"] }
