[package]
name = "notifier"
version = "1.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
lettre = { version = "~0.11", features = ["default", "tokio1-native-tls"]}
tokio = "1.44.0"
simple_logger = "~5.0.0"
log = "~0.4.26"
lapin = { version = "~2.5.0", features = ["native-tls"]}
serde_json = "~1.0.140"
futures-util = "0.3.31"
tera = "1"
css-inline = "0.14"
