[package]
name = "server"
version = "0.3.12"
edition = "2024"

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
futures-util = "~0.3.30"
lapin = { version = "~2.5.0", features = ["native-tls"]}
log = "~0.4"
reqwest = { version = "~0.12", features = ["json", "native-tls"] }
tokio = {version = "~1.44", features = ["full"] }
serde_json = "~1.0.117"
pretty_env_logger = "~0.5.0"
