[package]
name = "server"
version = "1.0.4"
edition = "2024"

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
futures-util = "~0.3.30"
lapin = { version = "~2.5.0", features = ["native-tls"]}
log = "~0.4"
reqwest = { version = "~0.12", features = ["json", "native-tls"] }
tokio = {version = "~1.44", features = ["full"] }
serde_json = "~1.0.117"
simple_logger = "~5.0.0"
config = { version = "~0.15.11" }
serde = { version = "1.0.219", features = ["derive"] }
tempdir = "~0.3.7"
git2 = "~0.20.0"
srcinfo = "~1.3.1"
