[package]
name = "server"
version = "1.1.6"
edition = "2024"

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
futures-util = "~0.3.30"
lapin = { version = "~2.5.0", features = ["native-tls"]}
log = "~0.4"
reqwest = { version = "~0.12", features = ["json", "native-tls"] }
tokio = {version = "1.45", features = ["full"] }
serde_json = "~1.0.117"
simple_logger = "~5.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3"
git2 = "~0.20.0"
srcinfo = "~1.3.1"
