[package]
name = "web"
version = "0.3.12"
edition = "2024"

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
tera = "1"
axum = { version = "~0.8.1", features = ["http2"] }
cached = { version="~0.55", features = ["async"] }
tower-http = { version="0.6.2", features = ["fs"] }
log = "~0.4"
reqwest = "~0.12"
tokio = {version = "~1.44", features = ["full"] }
pretty_env_logger = "~0.5.0"
