[package]
name = "worker"
version = "1.1.10"
edition = "2024"

[dependencies]
common = { path = "../common" }
futures-util = "~0.3.30"
lapin = { version = "~2.5.0", features = ["native-tls"]}
log = "~0.4"
tokio = {version = "1.45", features = ["full"] }
simple_logger = "~5.0.0"
serde_json = "~1.0.117"
bollard = "0.18"
sea-orm = "~1.1.4"
bytes = "1.9.0"
